<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Helper</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_newplan">Add schedule</string>
    <string name="action_loaddb">Load schedule</string>
    <string name="action_delplan">Delete schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Show Map</string>
    <string name="add">Add place</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude </string>
    <string name="gpson">Open GPS</string>
    <string name="gpsoff">Close GPS</string>
    <string name="plandate">Date</string>
    <string name="planname">Topic</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="title_activity_plan_list">Schedule list</string>
    <string name="delete_place">Delete Place</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
