<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_gps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="TurnGpsStatus" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lat" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lng" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="AddPlace"
        android:text="@string/add" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/plandatetitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="2dp"
            android:text="@string/plandate"
            android:textColor="@color/red" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:id="@+id/plandate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/plannametitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="2dp"
            android:text="@string/planname"
            android:textColor="@color/red" 
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:id="@+id/planname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>